// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header closing the Privacy Policy modal 1`] = `
<Fragment>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    isOpen={true}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <withI18nextTranslation(PrivacyPolicy)
      onClose={[Function]}
    />
  </Modal>
  <header
    className="header"
    data-banner={null}
  >
    <h1>
      <mockConstructor
        to="/"
      >
        Regexper
      </mockConstructor>
    </h1>
    <ul
      className="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <Gitlab
            color="currentColor"
            size="24"
          />
          <Trans>
            Source on GitLab
          </Trans>
        </a>
      </li>
      <li>
        <mockConstructor
          onClick={[Function]}
          to="/privacy"
        >
          <Trans>
            Privacy Policy
          </Trans>
        </mockConstructor>
      </li>
      <li>
        <withI18nextTranslation(InstallPrompt) />
      </li>
      <li
        data-requires-js={true}
      >
        <withI18nextTranslation(LocaleSwitcher) />
      </li>
    </ul>
  </header>
</Fragment>
`;

exports[`Header closing the Privacy Policy modal 2`] = `
<Fragment>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    isOpen={false}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <withI18nextTranslation(PrivacyPolicy)
      onClose={[Function]}
    />
  </Modal>
  <header
    className="header"
    data-banner={null}
  >
    <h1>
      <mockConstructor
        to="/"
      >
        Regexper
      </mockConstructor>
    </h1>
    <ul
      className="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <Gitlab
            color="currentColor"
            size="24"
          />
          <Trans>
            Source on GitLab
          </Trans>
        </a>
      </li>
      <li>
        <mockConstructor
          onClick={[Function]}
          to="/privacy"
        >
          <Trans>
            Privacy Policy
          </Trans>
        </mockConstructor>
      </li>
      <li>
        <withI18nextTranslation(InstallPrompt) />
      </li>
      <li
        data-requires-js={true}
      >
        <withI18nextTranslation(LocaleSwitcher) />
      </li>
    </ul>
  </header>
</Fragment>
`;

exports[`Header opening the Privacy Policy modal 1`] = `
<Fragment>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    isOpen={true}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <withI18nextTranslation(PrivacyPolicy)
      onClose={[Function]}
    />
  </Modal>
  <header
    className="header"
    data-banner={null}
  >
    <h1>
      <mockConstructor
        to="/"
      >
        Regexper
      </mockConstructor>
    </h1>
    <ul
      className="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <Gitlab
            color="currentColor"
            size="24"
          />
          <Trans>
            Source on GitLab
          </Trans>
        </a>
      </li>
      <li>
        <mockConstructor
          onClick={[Function]}
          to="/privacy"
        >
          <Trans>
            Privacy Policy
          </Trans>
        </mockConstructor>
      </li>
      <li>
        <withI18nextTranslation(InstallPrompt) />
      </li>
      <li
        data-requires-js={true}
      >
        <withI18nextTranslation(LocaleSwitcher) />
      </li>
    </ul>
  </header>
</Fragment>
`;

exports[`Header rendering 1`] = `
<Fragment>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    isOpen={false}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <withI18nextTranslation(PrivacyPolicy)
      onClose={[Function]}
    />
  </Modal>
  <header
    className="header"
    data-banner="testing"
  >
    <h1>
      <mockConstructor
        to="/"
      >
        Regexper
      </mockConstructor>
    </h1>
    <ul
      className="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <Gitlab
            color="currentColor"
            size="24"
          />
          <Trans>
            Source on GitLab
          </Trans>
        </a>
      </li>
      <li>
        <mockConstructor
          onClick={[Function]}
          to="/privacy"
        >
          <Trans>
            Privacy Policy
          </Trans>
        </mockConstructor>
      </li>
      <li>
        <withI18nextTranslation(InstallPrompt) />
      </li>
      <li
        data-requires-js={true}
      >
        <withI18nextTranslation(LocaleSwitcher) />
      </li>
    </ul>
  </header>
</Fragment>
`;

exports[`Header rendering with no banner 1`] = `
<Fragment>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    isOpen={false}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <withI18nextTranslation(PrivacyPolicy)
      onClose={[Function]}
    />
  </Modal>
  <header
    className="header"
    data-banner={null}
  >
    <h1>
      <mockConstructor
        to="/"
      >
        Regexper
      </mockConstructor>
    </h1>
    <ul
      className="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <Gitlab
            color="currentColor"
            size="24"
          />
          <Trans>
            Source on GitLab
          </Trans>
        </a>
      </li>
      <li>
        <mockConstructor
          onClick={[Function]}
          to="/privacy"
        >
          <Trans>
            Privacy Policy
          </Trans>
        </mockConstructor>
      </li>
      <li>
        <withI18nextTranslation(InstallPrompt) />
      </li>
      <li
        data-requires-js={true}
      >
        <withI18nextTranslation(LocaleSwitcher) />
      </li>
    </ul>
  </header>
</Fragment>
`;
